<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="user"
            type="com.thoughtwork.comment.model.User" />
        <variable
            name="LoginActivity"
            type="com.thoughtwork.comment.acitivity.LoginActivity" />
        <import type="android.view.View"/>
    </data>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:background="@color/white"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:background="@color/color_5242FF"
                    android:orientation="vertical"
                    android:layout_height="@dimen/dp_180">
                    <ImageView
                        android:id="@+id/login_logo"
                        android:layout_alignParentBottom="true"
                        android:layout_marginLeft="@dimen/dp_14"
                        android:layout_marginBottom="@dimen/dp_62"
                        android:layout_width="@dimen/dp_150"
                        android:layout_height="@dimen/dp_44"
                        android:contentDescription="@null"
                        android:src="@drawable/logo_icons"/>
                    <ImageView
                        android:layout_alignParentBottom="true"
                        android:layout_marginBottom="@dimen/dp_24"
                        android:layout_marginLeft="@dimen/dp_28"
                        android:layout_toRightOf="@id/login_logo"
                        android:layout_width="@dimen/dp_155"
                        android:layout_height="@dimen/dp_120"
                        android:src="@drawable/login_top"
                        >
                    </ImageView>
                </RelativeLayout>
                <RelativeLayout
                    android:layout_marginTop="@dimen/dp_m_20"
                    android:background="@drawable/shape_login"
                    android:layout_width="match_parent"
                    android:id="@+id/login_percent_relative_layout"
                    android:layout_height="match_parent"
                    android:padding="@dimen/dp_16"
                    >
                    <ImageView
                        android:visibility="gone"
                        android:id="@+id/login_image"
                        android:layout_marginTop="@dimen/dp_48"
                        android:layout_width="@dimen/dp_80"
                        android:layout_height="@dimen/dp_80"
                        android:scaleType="centerInside"
                        android:contentDescription="@null"
                        android:src="@drawable/img_logo"/>
                    <TextView
                        android:id="@+id/login_title"
                        android:layout_width="wrap_content"
                        android:textStyle="bold"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/login_image"
                        android:layout_marginTop="27dp"
                        android:text="@string/login_title"
                        android:textColor="@color/black"
                        android:textSize="@dimen/sp_22"></TextView>

                    <com.google.android.material.textfield.TextInputLayout
                        android:orientation="vertical"
                        android:layout_below="@+id/login_title"
                        android:layout_marginTop="@dimen/dp_24"
                        android:id="@+id/login_name_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/dp_50"
                            android:textSize="@dimen/sp_14"
                            android:singleLine="true"
                            android:textColorHint="@color/btnNotClickOrEtHintColor"
                            android:theme="@style/MyEditText"
                            android:text="@={user.orgCode}"
                            android:hint="@string/login_name_hint"
                            />
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:orientation="vertical"
                        android:layout_below="@+id/login_name_layout"
                        android:id="@+id/login_phone_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/dp_50"
                            android:text="@={user.userPhone}"
                            android:theme="@style/MyEditText"
                            android:singleLine="true"
                            android:textColorHint="@color/btnNotClickOrEtHintColor"
                            android:textSize="@dimen/sp_14"
                            android:inputType="phone"
                            android:hint="@string/login_phone_hint"
                            />
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:orientation="vertical"
                        android:layout_below="@+id/login_phone_layout"
                        android:layout_width="match_parent"
                        android:id="@+id/login_password_layout"
                        app:errorEnabled="true"
                        app:passwordToggleEnabled="true"
                        app:passwordToggleDrawable="@drawable/selector_password_show_or_hide"
                        android:layout_height="wrap_content">
                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/dp_50"
                            android:text="@={user.userPass}"
                            android:theme="@style/MyEditText"
                            android:singleLine="true"
                            android:textColorHint="@color/btnNotClickOrEtHintColor"
                            android:textSize="@dimen/sp_14"
                            android:inputType="textPassword"
                            android:hint="@string/login_password_hint"
                            />
                    </com.google.android.material.textfield.TextInputLayout>
                    <Button
                        android:id="@+id/login_btn"
                        android:layout_below="@+id/login_password_layout"
                        android:enabled="@{user.isClickable}"
                        android:layout_width="match_parent"
                        android:onClick="@{LoginActivity::onClick}"
                        android:background="@{user.isClickable ? @drawable/login_btn_click_shape: @drawable/login_btn_not_click_shape}"
                        android:textColor="@{user.isClickable ? @color/white : @color/white}"
                        android:textSize="@dimen/sp_18"
                        android:text="@string/login_btn_text"
                        android:layout_height="@dimen/dp_45">
                    </Button>
                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:orientation="horizontal"
                        android:layout_below="@+id/login_btn"
                        android:id="@+id/layout"
                        android:layout_marginTop="@dimen/dp_20"
                        android:layout_height="wrap_content">
                        <LinearLayout
                            android:layout_alignParentLeft="true"
                            android:clickable="true"
                            android:gravity="center"
                            android:layout_width="@dimen/dp_100"
                            android:orientation="horizontal"
                            android:onClick="@{LoginActivity::setRemberPwd}"
                            android:layout_height="match_parent">
                            <TextView
                                android:background="@{user.selectRemPwd? @drawable/radio_pre : @drawable/radio_def}"
                                android:layout_width="@dimen/dp_28"
                                android:layout_height="@dimen/dp_28"
                                android:layout_centerVertical="true"
                                android:textSize="@dimen/sp_14"
                                >
                            </TextView>
                            <TextView
                                android:layout_width="wrap_content"
                                android:gravity="center"
                                android:textSize="@dimen/sp_14"
                                android:text="@string/login_rbtn_text"
                                android:layout_height="match_parent">
                            </TextView>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:onClick="@{LoginActivity::goNetworkTest}"
                            android:clickable="true"
                            android:layout_centerInParent="true"
                            android:layout_height="wrap_content">
                            <TextView
                                android:layout_width="wrap_content"
                                android:text="网络测试"
                                android:textSize="@dimen/sp_14"
                                android:layout_height="wrap_content">
                            </TextView>
                        </LinearLayout>
                        <TextView
                            android:onClick="@{LoginActivity::getBackPwd}"
                            android:layout_centerVertical="true"
                            android:layout_alignParentRight="true"
                            android:layout_width="wrap_content"
                            android:textSize="@dimen/sp_14"
                            android:layout_height="wrap_content"
                            android:text="@string/login_get_back_pwd">
                        </TextView>
                    </RelativeLayout>
                </RelativeLayout>
            </LinearLayout>
        </ScrollView>
        <LinearLayout
            android:background="@color/color_5242FF"
            android:visibility="@{user.isShowLoginNoteLayout? View.VISIBLE : View.GONE}"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_44"
                >
                <Button
                    android:onClick="@{LoginActivity::onClick}"
                    android:id="@+id/title_layout_left_btn"
                    android:layout_width="@dimen/dp_24"
                    android:layout_height="@dimen/dp_24"
                    android:layout_marginLeft="@dimen/dp_16"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:background="@drawable/nav_white_back"
                    />
                <TextView
                    android:id="@+id/title_layout_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_18"
                    android:text="@{user.titleName}">
                </TextView>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="match_parent">
                <androidx.recyclerview.widget.RecyclerView

                    android:id="@+id/login_note_list"
                    android:layout_gravity="center"
                    android:divider="@null"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                </androidx.recyclerview.widget.RecyclerView>
            </RelativeLayout>
        </LinearLayout>
    </FrameLayout>
</layout>